--- a/Amazon_replica/product.html
+++ b/Amazon_replica/product.html
@@ -11,38 +11,40 @@
 
 <body>
     <div class="product">
-        <div class="leftpart">
-            <div class="leftpart-1stchild">
-                <ul>
-                    <li><img src="img/samsung.jpg"></li>
-                    <li><img src="img/videopic-samsung.jpg">4 VIDEOS</li>
-                    <li><img src="img/feature-samsung.jpg"></li>
-                    <li><img src="img/back img1.jpg"></li>
-                    <li><img src="img/back.jpg"></li>
-                    <li><img src="img/front.jpg"></li>
-                    <li><img src="img/diagonal.jpg"></li>
-                </ul>
-            </div>
-            <div class="leftpart-2ndchild"><img src="img/samsung1.jpg"> <br> Roll over image to zoom in</div>
-        </div>
-        <div class="centerpart">
-            <div class="description">
-                <p>OnePlus 7 pro (Mirror grey, 8GB RAM, Fluid AMOLED Display, 256GB Storage, 4000mAH Battery)</p>
-                <span class="desp">Visit the OnePlus Store</span><br>
-                <span class="desp"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img
-                        src="img/star.png"><img src="img/star.png">&nbsp;&nbsp;&nbsp;22,858ratings | 1000+ answered
-                    question</span>
-                <hr>
-                <div class="rw">
+        <div class="upperpart">
+            <div class="leftpart">
+                <div class="leftpart-1stchild">
                     <ul>
-                        <li><img src="img/replacement.png"><br>7 days<br>Replacement</li>
-                        <li><img src="img/warranty.png"><br>1 year<br>Warranty</li>
+                        <li><img src="img/samsung.jpg"></li>
+                        <li><img src="img/videopic-samsung.jpg"> 4 <br> VIDEOS</li>
+                        <li><img src="img/feature-samsung.jpg"></li>
+                        <li><img src="img/back img1.jpg"></li>
+                        <li><img src="img/back.jpg"></li>
+                        <li><img src="img/front.jpg"></li>
+                        <li><img src="img/diagonal.jpg"></li>
                     </ul>
+                </div>
+                <div class="leftpart-2ndchild"><img src="img/samsung1.jpg"> <br> Roll over image to zoom in</div>
+            </div>
+            <div class="centerpart">
+                <div class="description">
+                    <p>OnePlus 7 pro (Mirror grey, 8GB RAM, Fluid AMOLED Display, 256GB Storage, 4000mAH Battery)</p>
+                    <div class="desp">Visit the OnePlus Store</div>
+                    <div class="desp"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img
+                            src="img/star.png"><img src="img/star.png">&nbsp;&nbsp;&nbsp;22,858ratings | 1000+ answered
+                        question</div>
                     <hr>
+                    <div class="rw">
+                        <ul>
+                            <li><img src="img/replacement.png"><br>7 days<br>Replacement</li>
+                            <li><img src="img/warranty.png"><br>1 year<br>Warranty</li>
+                        </ul>
+                        <hr>
+                    </div>
                 </div>
                 <div class="product-description">
                     <h4>Currently unavailable</h4>
-                    <p>We don't know when or if this item will be back in stock.</p><br>
+                    <p>We don't know when or if this item will be back in stock.</p>
                     <ul>
                         <li>Rear Camera-48MP (Primary) + 8MP (Tele-photo) + 16MP (Ultrawide)|Front Camera - 16 MP POP-UP
                             Camera.</li>
@@ -58,26 +60,92 @@
                             (pre-applied) and SIM Tray Ejector</li>
                     </ul>
 
+                    <div class="desp">See more product details</div><br>
+                    <div class="desp">Compare with similar items</div>
+                    <div class="desp"> <img src="img/msg.png"> Report incorrect product information</div><br>
+                    <hr>
+                    <h4>There is a newer model of this item:</h4>
+                    <div class="newmodel"><img src="img/newmodel.jpg"> </div>
+                    <div class="newmodeldes"> OnePlus 7T Pro (Haze Bue,8GB RAM, Fluid AMOLED Display, 256GB Storage,
+                        4085mAH Battery) </div>
+                    <h4>&#8377;47,999.00</h4>
+                    <div class="desp"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img
+                            src="img/star.png"><img src="img/star.png">&nbsp;(3,981) - In stock</div>
+                </div>
+            </div>
+            <div class="rightpart">
+                <div class="upperchild">
+                    <div class="share"><a href="#">Share</a></div>
+                    <div class="socialmedia">
+                        <ul>
+                            <li><img src="img/email.png"></li>
+                            <li><img src="img/fb.png"></li>
+                            <li><img src="img/twitter.jpg"></li>
+                            <li><img src="img/pinterest.png"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="status">
+                    <h4>Currently unavailable</h4>
+                    <p>We dont know when or if this item will be back in stock.</p>
+                    <button class="btn">Add to Wish list</button>
+
                 </div>
             </div>
         </div>
-        <div class="rightpart">
-            <div class="upperchild">
-                <div class="share"><a href="#">Share</a></div>
-                <div class="socialmedia">
-                    <ul>
-                        <li><img src="img/email.png"></li>
-                        <li><img src="img/fb.png"></li>
-                        <li><img src="img/twitter.jpg"></li>
-                        <li><img src="img/pinterest.png"></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="status">
-                <h4>Currently unavailable</h4>
-                <p>We dont know when or if this item will be back in stock.</p>
-                <button class="btn">Add to Wish list</button>
-
+        <div class="midpart">
+            <div class="similarproducts">
+                <table>
+                    <tr>
+                        <td><img src="img/mobile1.jpg"></td>
+                        <td><img src="img/mobile2.jpg"></td>
+                        <td><img src="img/mobile3.jpg"></td>
+                        <td><img src="img/mobile4.jpg"></td>
+                    </tr>
+                    <tr>
+                        <td><b>You are viewing:</b> OnePlus 7 Pro (Mirror Grey,8GB RAM, Fluid AMOLED Display, 256GB
+                            Storage, 4000mAH Battery)</td>
+                        <td class="desp">OnePlus 8|(Glacial Green 6GB RAM + 12GB Storage)</td>
+                        <td class="desp">OnePlus 7T|(Glacier Blue, 8GB RAM, Fluid AMOLED Display, 256GB Storage, 3800mAH
+                            Battery) </td>
+                        <td class="desp">OnePlus 7T Pro (Hazel Blue, 8GB RAM ,Fluid AMOLED Display, 256GB Storage,
+                            4085mAH Battery)</td>
+                    </tr>
+                    <tr>
+                        <td class="price">Unavailable</td>
+                        <td class="price">&#8377;41,999.00 <img src="img/sign.png"><span class="desp">prime</span></td>
+                        <td class="price">&#8377;37,999.00<img src="img/sign.png"><span class="desp">prime</span></td>
+                        <td class="price">&#8377;47,999.00<img src="img/sign.png"><span class="desp">prime</span></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="desp"><img src="img/star.png"><img src="img/star.png"><img
+                                    src="img/star.png"><img src="img/star.png"><img src="img/star.png">&nbsp;(22858)
+                            </div>
+                        </td>
+                        <td>
+                            <div class="desp"><img src="img/star.png"><img src="img/star.png"><img
+                                    src="img/star.png"><img src="img/star.png"><img src="img/star.png">&nbsp;(2021)
+                            </div>
+                        </td>
+                        <td>
+                            <div class="desp"><img src="img/star.png"><img src="img/star.png"><img
+                                    src="img/star.png"><img src="img/star.png"><img src="img/star.png">&nbsp;(31030)
+                            </div>
+                        </td>
+                        <td>
+                            <div class="desp"><img src="img/star.png"><img src="img/star.png"><img
+                                    src="img/star.png"><img src="img/star.png"><img src="img/star.png">&nbsp;(3981)
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><button class="btn">Add to cart</td>
+                        <td><button class="btn">Add to cart</td>
+                        <td><button class="btn">Add to cart</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
