--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -64,7 +64,9 @@
             <img src="img/carousel5.jpg">
             <div class="card">
                 <div class="card-1stchild">
-                    <div class="grandchild1"> <h3>Amazon Pay | Pay utility <br>bills fast & conveniently  </h3> </div>
+                    <div class="grandchild1">
+                        <h3>Amazon Pay | Pay utility <br>bills fast & conveniently </h3>
+                    </div>
                     <div class="grandchild2">
                         <div class="a">
                             <div class="aa"><img src="img/Electricity.jpg"> <br> Electricity bill</div>
@@ -78,17 +80,23 @@
                     <div class="grandchild3"><a href="#">Explore more from Amazon Pay</a></div>
                 </div>
                 <div class="card-2ndchild">
-                    <div class="grandchild-a"> <h3> Headphones for your music needs </h3> </div>
+                    <div class="grandchild-a">
+                        <h3> Headphones for your music needs </h3>
+                    </div>
                     <div class="grandchild-b"><img src="img/earphone.jpg"></div>
                     <div class="grandchild-c"><a href="#">See more</a></div>
                 </div>
                 <div class="card-3rdchild">
-                    <div class="grandchild-a"> <h3> Up to 70% | Clearance store </h3> </div>
+                    <div class="grandchild-a">
+                        <h3> Up to 70% | Clearance store </h3>
+                    </div>
                     <div class="grandchild-b"><img src="img/oled.jpg"></div>
                     <div class="grandchild-c"><a href="#">See more</a></div>
                 </div>
                 <div class="card-4thchild">
-                    <div class="grandchild-a"> <h3>For a productive home office </h3> </div>
+                    <div class="grandchild-a">
+                        <h3>For a productive home office </h3>
+                    </div>
                     <div class="grandchild-b"><img src="img/house.jpeg"></div>
                     <div class="grandchild-c"><a href="#">See more</a></div>
                 </div>
@@ -98,7 +106,9 @@
             <div class="card2">
                 <div class="card2child1"><img src="img/movie trailor.jpg"></div>
                 <div class="card2child2">
-                    <div class="grandchild1"> <h3>Amazon Pay | Pay utility <br>bills fast & conveniently  </h3> </div>
+                    <div class="grandchild1">
+                        <h3>Amazon Pay | Pay utility <br>bills fast & conveniently </h3>
+                    </div>
                     <div class="grandchild2">
                         <div class="a">
                             <div class="aa"><img src="img/credit card bill.jpg"> <br> Creditcard bill</div>
@@ -112,7 +122,9 @@
                     <div class="grandchild3"><a href="#">Explore more from Amazon Pay</a></div>
                 </div>
                 <div class="card2child3">
-                    <div class="grandchild1"> <h3>Shop by Category</h3> </div>
+                    <div class="grandchild1">
+                        <h3>Shop by Category</h3>
+                    </div>
                     <div class="grandchild2">
                         <div class="a">
                             <div class="aa"><img src="img/fresh.jpg"> <br>Fresh</div>
@@ -126,6 +138,32 @@
                     <div class="grandchild3"><a href="#">See More</a></div>
                 </div>
             </div>
+            <div class="card3">
+                <div class="cardparent">
+                    <div class="cardheading"><span>Up tp 60% off|Handloom sarees</span><a href="#">&nbsp;&nbsp;Explore more</a></div>
+                    <div class="cardchild"><img src="img/saree1.jpg"></div>
+                    <div class="cardchild"><img src="img/saree2.jpg"></div>
+                    <div class="cardchild"><img src="img/saree3.jpg"></div>
+                    <div class="cardchild"><img src="img/saree4.jpg"></div>
+                    <div class="cardchild"><img src="img/saree5.jpg"></div>
+                    <div class="cardchild"><img src="img/saree6.jpg"></div>
+                    <div class="cardchild"><img src="img/saree7.jpg"></div>
+                    <div class="cardchild"><img src="img/saree8.jpg"></div>
+                </div>
+            </div>
+            <div class="card4">
+                <div class="cardparent">
+                    <div class="cardheading"><span>Essential food products|Amazon Launchpad</span></div>
+                    <div class="cardchild"><img src="img/food1.jpg"></div>
+                    <div class="cardchild"><img src="img/food2.jpg"></div>
+                    <div class="cardchild"><img src="img/food3.jpg"></div>
+                    <div class="cardchild"><img src="img/food4.jpg"></div>
+                    <div class="cardchild"><img src="img/food5.jpg"></div>
+                    <div class="cardchild"><img src="img/food6.jpg"></div>
+                    <div class="cardchild"><img src="img/food7.jpg"></div>
+                    <div class="cardchild"><img src="img/food8.jpg"></div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -133,7 +171,7 @@
         <div class="footer1"><a href="#" target="_self">Back to top</a></div>
         <div class="footer2">
             <div class="footer2-parent">
-                <div class="footer2-child1">
+                <div class="footer2-child">
                     <ul>
                         <li><b>Get to know us</b></li>
                         <li>About Us</li>
@@ -144,7 +182,7 @@
                         <li>Amazon Science</li>
                     </ul>
                 </div>
-                <div class="footer2-child2">
+                <div class="footer2-child">
                     <ul>
                         <li><b>Connect with us</b></li>
                         <li>Facebook</li>
@@ -152,7 +190,7 @@
                         <li>Instagram</li>
                     </ul>
                 </div>
-                <div class="footer2-child3">
+                <div class="footer2-child">
                     <ul>
                         <li><b>Make Money with Us</b></li>
                         <li>Sell on Amazon</li>
@@ -164,7 +202,7 @@
                         <li>Amazon pay on Merchants</li>
                     </ul>
                 </div>
-                <div class="footer2-child4">
+                <div class="footer2-child">
                     <ul>
                         <li><b>Let us Help You</b></li>
                         <li>Covid-19 and Amazon</li>
@@ -209,25 +247,25 @@
         </div>
         <div class="footer4">
             <div class="footer4-parent">
-                <div class="footer4-1stchild">
+                <div class="footer4-child">
                     <a href="#" target="_self"><b>AbeBooks</b><br>Books,art <br>& collection</a><br><br>
                     <a href="#" target="_self"><b>Shopbop</b><br>Designer<br>Fashion Brands</a>
                 </div>
-                <div class="footer4-2ndchild">
+                <div class="footer4-child">
                     <a href="#" target="_self"><b>Amazon Web Services</b><br>Scalable Cloud<br>Computing
                         Services</a><br><br>
                     <a href="#" target="_self"><b>Amazon Business</b><br>Everything For<br>Your Business</a>
                 </div>
-                <div class="footer4-3rdchild">
+                <div class="footer4-child">
                     <a href="#" target="_self"><b>Audible</b><br>Download<br>Audio Books</a><br><br>
                     <a href="#" target="_self"><b>Prime Now</b><br>2-Hours Delivery<br>Fashion Brands</a>
                 </div>
-                <div class="footer4-4thchild">
+                <div class="footer4-child">
                     <a href="#" target="_self"><b>DPReview</b><br>Digital<br>Photography</a><br><br>
                     <a href="#" target="_self"><b>Amazon Prime Music</b><br>75 million songs, ad-free<br>Over 10 million
                         podcast episodes</a>
                 </div>
-                <div class="footer4-5thchild">
+                <div class="footer4-child">
                     <a href="#" target="_self"><b>IMDb</b><br>Movies,TV <br>& celebrities</a><br><br>
                 </div>
             </div>
