--- a/Amazon_replica/form.html
+++ b/Amazon_replica/form.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+
+ 
+    <!------------------------------------------Header part------------------------------------------------------>
+
     <header class="header">
         <div class="upper-part">
             <div class="left-upper-part">
@@ -37,7 +41,42 @@
             </div>
         </div>
         <div class="lower-part">
-            <div class="left-lower-part"><a href="#" target="_self" class="n">&#9776 All</a></div>
+            <div class="left-lower-part">
+                <a href="#" target="_self" class="n" onclick="openNav()">&#9776 All</a>
+                <div class="sidenav" id="mySidenav">
+                    <a href="#" class="closebtn" onclick="closeNav()">&times;</a>
+                    <h3>Hello,Sign in</h3>
+                    <h4>Trending</h4>
+                    <a href="#">Best Seller</a>
+                    <a href="#">New Releases</a>
+                    <a href="#">Movers and Shakers</a>
+                    <hr>
+                    <h4>Digital Content And Devices</h4>
+                    <a href="#">Echo & Alexa</a>
+                    <a href="#">Fire TV</a>
+                    <a href="#">Kindle E-Reader & eBooks</a>
+                    <a href="#">Amazon Audiobooks</a>
+                    <a href="#">Amazon Prime Video</a>
+                    <a href="#">Amazon Prime Music</a>
+                    <hr>
+                    <h4>Shop By Deapartment</h4>
+                    <a href="#">Mobile, Computers</a>
+                    <a href="#">TV, Appliances, Electronics</a>
+                    <a href="#">Men's Fashion</a>
+                    <a href="#">Women's Fashion</a>
+                    <hr>
+                    <h4>Program & Features</h4>
+                    <a href="#">Gift Cards & Mobile Recharges</a>
+                    <a href="#">Flight Tickets</a>
+                    <a href="#">#FoundItOnAmazon</a>
+                    <a href="#">Clearance store</a>
+                    <hr>
+                    <h4>Help & Setting</h4>
+                    <a href="#">Your Account</a>
+                    <a href="#">Customer Service</a>
+                    <a href="#">Sign In</a>
+                </div>
+            </div>
             <div class="mid-lower-part">
                 <a href="#" target="_self" class="nav_2">Best Sellers</a>
                 <a href="#" target="_self" class="nav_2">Mobiles</a>
@@ -56,6 +95,9 @@
             </div>
         </div>
     </header>
+    
+    
+ <!-----------------------------------------------------form body section------------------------------------>
     <div class="form">
         <form class="formcontainer">
             <div class="heading">
