--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -100,8 +100,40 @@
     <!-------------------------------------------------Section part--------------------------------------------->
 
     <section class="section">
-        <div class="carousel">
-            <img src="img/carousel5.jpg">
+        <div class="firstpartofsection">
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <img src="img/carousel1.jpg" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="img/carousel2.jpg" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="img/carousel3.jpg" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="img/carousel4.jpg" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="img/carousel5.jpg" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="img/carousel6.jpg" style="width:100%">
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+
             <div class="card">
                 <div class="card-1stchild">
                     <div class="grandchild1">
@@ -142,13 +174,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="carousel"><img src="img/carousel1.jpg"></div>
-       <div class="carousel"><img src="img/carousel2.jpg"></div>
-       <div class="carousel"><img src="img/carousel3.jpg"></div>
-       <div class="carousel"><img src="img/carousel4.jpg"></div>
-       <div class="carousel"><img src="img/carousel6.jpg"></div>-->
-        <span class="arrow prev">&#10094;</span>
-        <span class="arrow next">&#10095;</span>
+
         <div class="product">
             <div class="card2">
                 <div class="card2child1"><img src="img/movie trailor.jpg"></div>
@@ -185,7 +211,7 @@
                     <div class="grandchild3"><a href="#">See More</a></div>
                 </div>
             </div>
-            <div class="card3">
+            <!--   <div class="card3">
                 <div class="cardparent">
                     <div class="cardheading"><span>Up tp 60% off|Handloom sarees</span><a href="#">&nbsp;&nbsp;Explore
                             more</a></div>
@@ -198,27 +224,43 @@
                     <div class="cardchild"><img src="img/saree7.jpg"></div>
                     <div class="cardchild"><img src="img/saree8.jpg"></div>
 
-                    <a class="prevarrowcursor" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="nextarrowcursor" onclick="plusSlides(1)">&#10095;</a>
+                    <a class="prevarrowcursor">&#10094;</a>
+                    <a class="nextarrowcursor">&#10095;</a>
                 </div>
             </div>
             <div class="card4">
                 <div class="cardparent">
                     <div class="cardheading"><span>Essential food products|Amazon Launchpad</span></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food1.jpg"></div></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food2.jpg"></div></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food3.jpg"></div></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food4.jpg"></div></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food5.jpg"></div></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food6.jpg"></div></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food7.jpg"></div></div>
-                     <div class="mySlides"><div class="cardchild"><img src="img/food8.jpg"></div></div>
-                     
-        
-                    <a class="prevarrowcursor" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="nextarrowcursor" onclick="plusSlides(1)">&#10095;</a>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food1.jpg"></div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food2.jpg"></div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food3.jpg"></div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food4.jpg"></div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food5.jpg"></div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food6.jpg"></div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food7.jpg"></div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="cardchild"><img src="img/food8.jpg"></div>
+                    </div>
+
+
+                    <a class="prevarrowcursor">&#10094;</a>
+                    <a class="nextarrowcursor">&#10095;</a>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
 
