--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="mid-upper-part">
-                <div class="dropdown">All</div>
+                <div class="menu">All</div>
                 <div class="searchbox">
                     <input type="text" class="search">
                 </div>
@@ -35,7 +35,44 @@
             </div>
 
             <div class="right-upper-part">
-                <div class="lang"><img src="img/flag.png"></div>
+                <div class="dropdown">
+                    <button class="dropbtn"><img src="img/flag.png">
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">
+                            <input type="radio">
+                            <label for="html">English - EN</label><br>
+                        </a>
+                        <hr>
+                        <a href="#">
+                            <input type="radio">
+                            <label for="html">हिन्दी - HI</label><br>
+                        </a>
+                        <a href="#">
+                            <input type="radio">
+                            <label for="html">தமிழ் - TA</label><br>
+                        </a>
+                        <a href="#">
+                            <input type="radio">
+                            <label for="html">ಕನ್ನಡ - KN</label><br>
+                        </a>
+                        <a href="#">
+                            <input type="radio">
+                            <label for="html">മലയാളം - ML</label><br>
+                        </a>
+                        <a href="#">
+                            <input type="radio">
+                            <label for="html">বাংলা - BN</label><br>
+                        </a>
+                        <a href="#">
+                            <input type="radio">
+                            <label for="html">मराठी - MR</label><br>
+                        </a>
+                        <hr>
+                        <a href="#"> You are shopping on Amazon.in</a>
+                        <a href="#" style="color: rgb(12, 157, 214);">Change country/region</a>
+                    </div>
+                </div>
                 <div class="account">Hello ,Sigh in<br><b>Account & Lists</b></div>
                 <div class="order"><a href="#" target="_self">Returns<br><b>& Orders</b></a></div>
                 <div class="cart"><a href="#" target="_self"><img src="img/cart.png">Cart</a></div>
